Req31: Fix- Small Fonts not visible for small screens

--- a/static/index-style.css
+++ b/static/index-style.css
@@ -6,7 +6,7 @@
 body{
     font-size: 16px;
     background-color: rgb(228, 215, 215);
-    min-width: 300px;
+    min-width: 350px;
     
 }
 
@@ -101,7 +101,7 @@ body{
 @media(max-width:700px) {
   
     body{
-        font-size: 12px;
+        font-size: 18px;
     }
 
 
