--- a/static/sub-page-style.css
+++ b/static/sub-page-style.css
@@ -57,7 +57,7 @@ body{
 @media(max-width:700px) {
   
     body{
-        font-size: 12px;
+        font-size: 18px;
     }
 
 
